--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pl"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Logowanie</title>
+<title>Logowanie do servera</title>
 <style type="text/css" id="operaUserStyle"></style></head>
 <body>
 <h2>zaloguj śę</h2>
