--- a/index.html
+++ b/index.html
@@ -1,13 +1,150 @@
 <!DOCTYPE html>
-<html lang="pl"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Logowanie do servera</title>
-<style type="text/css" id="operaUserStyle"></style></head>
+<html lang="pl">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Logowanie do serwera</title>
+
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+
+<style>
+*{
+    box-sizing:border-box;
+    font-family:'Poppins',sans-serif;
+}
+
+body{
+    margin:0;
+    min-height:100vh;
+    background:url("tlo.gif") no-repeat center center fixed;
+    background-size:cover;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    padding:20px;
+}
+
+.overlay{
+    position:fixed;
+    inset:0;
+    background:rgba(0,0,0,0.45);
+    z-index:-1;
+}
+
+.card{
+    background:rgba(255,255,255,0.12);
+    backdrop-filter:blur(12px);
+    border-radius:20px;
+    padding:30px;
+    max-width:480px;
+    width:100%;
+    color:#fff;
+    box-shadow:0 0 40px rgba(0,0,0,0.6);
+    animation:floatIn 1.1s ease;
+}
+
+h2{
+    text-align:center;
+    margin-bottom:20px;
+}
+
+.info{
+    margin:10px 0;
+    font-size:15px;
+}
+
+.label{
+    color:#00e5ff;
+    font-weight:600;
+}
+
+.download{
+    display:block;
+    text-align:center;
+    margin:15px 0;
+    padding:12px;
+    background:linear-gradient(135deg,#00e5ff,#0077ff);
+    color:#000;
+    border-radius:25px;
+    text-decoration:none;
+    font-weight:600;
+    transition:0.3s;
+}
+
+.download:hover{
+    transform:scale(1.05);
+    box-shadow:0 0 15px #00e5ff;
+}
+
+.steps{
+    margin-top:20px;
+    background:rgba(0,0,0,0.35);
+    padding:15px;
+    border-radius:15px;
+    font-size:14px;
+}
+
+.steps h3{
+    margin-top:0;
+    color:#00e5ff;
+    font-size:17px;
+}
+
+.steps ol{
+    padding-left:18px;
+}
+
+.footer{
+    text-align:center;
+    margin-top:18px;
+    font-size:16px;
+}
+
+/* Mobile */
+@media(max-width:480px){
+    h2{font-size:20px;}
+    .info,.steps{font-size:13px;}
+    .download{font-size:14px;}
+}
+
+@keyframes floatIn{
+    from{opacity:0;transform:translateY(40px) scale(.9);}
+    to{opacity:1;transform:translateY(0) scale(1);}
+}
+</style>
+</head>
 <body>
-<h2>zaloguj śę</h2>
-<p><b>IP Servera:</b> 100.96.49.10<br>
-<p><a href="https://pkgs.tailscale.com/stable/tailscale-setup-latest.exe">Pobierz VPN</a></p>
-<p><b>Login:</b> fiukmikolaj071@gmail.com<br>
-<p><b>Hasło:</b> FtwieU36utPfaetU<br>
-<p>Miłej Gry<b>😀<br>
-<pre></pre>
-</body></html>
+
+<div class="overlay"></div>
+
+<div class="card">
+    <h2>🔐 Logowanie do serwera</h2>
+
+    <div class="info"><span class="label">IP serwera:</span> 100.96.49.10</div>
+
+    <a class="download" href="https://pkgs.tailscale.com/stable/tailscale-setup-latest.exe">
+        ⬇ Pobierz VPN (Tailscale)
+    </a>
+
+    <div class="info"><span class="label">Login:</span> fiukmikolaj071@gmail.com</div>
+    <div class="info"><span class="label">Hasło:</span> FtwieU36utPfaetU</div>
+
+    <div class="steps">
+        <h3>📌 Jak dołączyć do serwera?</h3>
+        <ol>
+            <li>Pobierz i zainstaluj <b>Tailscale VPN</b>.</li>
+            <li>Zaloguj się na podany login i hasło.</li>
+            <li>Połącz VPN (status: Connected).</li>
+            <li>Uruchom grę.</li>
+            <li>Wpisz IP: <b>100.96.49.10</b></li>
+            <li>Gotowe – miłej gry 🎮</li>
+        </ol>
+    </div>
+
+    <div class="footer">
+        Miłej gry 😄🔥
+    </div>
+</div>
+
+</body>
+</html>
