--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="icon" type="image/x-icon" href="https://mikolajfiuk.xce.pl/favicon.ico">
 <title>Logowanie do serwera</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
@@ -142,7 +143,7 @@ h2{
     </div>
 
     <div class="footer">
-        Miłej gry 😄🔥
+        Miłej gry na serverze 😄🔥
     </div>
 </div>
 
