--- a/index.html
+++ b/index.html
@@ -4,15 +4,12 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" type="image/x-icon" href="https://mikolajfiuk.xce.pl/favicon.ico">
-<title>Logowanie do serwera</title>
+<title>Debian login</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
 
 <style>
-*{
-    box-sizing:border-box;
-    font-family:'Poppins',sans-serif;
-}
+*{box-sizing:border-box;font-family:'Poppins',sans-serif;}
 
 body{
     margin:0;
@@ -23,30 +20,54 @@ body{
     align-items:center;
     justify-content:center;
     padding:20px;
+    overflow:hidden;
 }
 
 .overlay{
     position:fixed;
     inset:0;
-    background:rgba(0,0,0,0.45);
-    z-index:-1;
+    background:linear-gradient(120deg, rgba(0,229,255,0.15), rgba(0,0,0,0.55), rgba(0,119,255,0.2));
+    animation:bgMove 12s ease-in-out infinite;
+    z-index:-2;
+}
+
+.particle{
+    position:absolute;
+    width:6px;
+    height:6px;
+    background:#00e5ff;
+    border-radius:50%;
+    opacity:.6;
+    animation:float 10s linear infinite;
 }
 
 .card{
+    position:relative;
     background:rgba(255,255,255,0.12);
-    backdrop-filter:blur(12px);
-    border-radius:20px;
+    backdrop-filter:blur(14px);
+    border-radius:22px;
     padding:30px;
     max-width:480px;
     width:100%;
     color:#fff;
-    box-shadow:0 0 40px rgba(0,0,0,0.6);
-    animation:floatIn 1.1s ease;
+    box-shadow:
+        0 0 25px rgba(0,229,255,.25),
+        0 0 60px rgba(0,0,0,.7);
+    animation:floatIn 1.1s cubic-bezier(.2,.8,.2,1);
+    transition:.4s;
+}
+
+.card:hover{
+    transform:translateY(-6px) scale(1.01);
+    box-shadow:
+        0 0 35px rgba(0,229,255,.45),
+        0 0 90px rgba(0,0,0,.8);
 }
 
 h2{
     text-align:center;
     margin-bottom:20px;
+    text-shadow:0 0 12px rgba(0,229,255,.7);
 }
 
 .info{
@@ -60,21 +81,39 @@ h2{
 }
 
 .download{
+    position:relative;
     display:block;
     text-align:center;
-    margin:15px 0;
-    padding:12px;
+    margin:12px 0;
+    padding:13px;
     background:linear-gradient(135deg,#00e5ff,#0077ff);
     color:#000;
-    border-radius:25px;
+    border-radius:30px;
     text-decoration:none;
-    font-weight:600;
-    transition:0.3s;
+    font-weight:700;
+    letter-spacing:.5px;
+    overflow:hidden;
+    transition:.3s;
+}
+
+.download::before{
+    content:"";
+    position:absolute;
+    top:0;
+    left:-100%;
+    width:100%;
+    height:100%;
+    background:linear-gradient(120deg,transparent,rgba(255,255,255,.6),transparent);
+    transition:.6s;
+}
+
+.download:hover::before{
+    left:100%;
 }
 
 .download:hover{
-    transform:scale(1.05);
-    box-shadow:0 0 15px #00e5ff;
+    transform:scale(1.07);
+    box-shadow:0 0 22px #00e5ff;
 }
 
 .steps{
@@ -83,6 +122,7 @@ h2{
     padding:15px;
     border-radius:15px;
     font-size:14px;
+    animation:fadeUp 1.2s ease;
 }
 
 .steps h3{
@@ -99,9 +139,9 @@ h2{
     text-align:center;
     margin-top:18px;
     font-size:16px;
+    opacity:.9;
 }
 
-/* Mobile */
 @media(max-width:480px){
     h2{font-size:20px;}
     .info,.steps{font-size:13px;}
@@ -109,14 +149,42 @@ h2{
 }
 
 @keyframes floatIn{
-    from{opacity:0;transform:translateY(40px) scale(.9);}
+    from{opacity:0;transform:translateY(50px) scale(.9);}
     to{opacity:1;transform:translateY(0) scale(1);}
+}
+
+@keyframes fadeUp{
+    from{opacity:0;transform:translateY(20px);}
+    to{opacity:1;transform:translateY(0);}
+}
+
+@keyframes bgMove{
+    0%{filter:hue-rotate(0deg);}
+    50%{filter:hue-rotate(40deg);}
+    100%{filter:hue-rotate(0deg);}
+}
+
+@keyframes float{
+    from{transform:translateY(110vh) scale(.5);opacity:0;}
+    20%{opacity:.6;}
+    to{transform:translateY(-10vh) scale(1.2);opacity:0;}
 }
 </style>
 </head>
 <body>
 
 <div class="overlay"></div>
+
+<script>
+for(let i=0;i<25;i++){
+    const p=document.createElement("div");
+    p.className="particle";
+    p.style.left=Math.random()*100+"%";
+    p.style.animationDelay=(Math.random()*10)+"s";
+    p.style.animationDuration=(6+Math.random()*8)+"s";
+    document.body.appendChild(p);
+}
+</script>
 
 <div class="card">
     <h2>🔐 Logowanie do serwera</h2>
@@ -125,6 +193,11 @@ h2{
 
     <a class="download" href="https://pkgs.tailscale.com/stable/tailscale-setup-latest.exe">
         ⬇ Pobierz VPN (Tailscale)
+    </a>
+
+    <!-- nowy link do listy graczy -->
+    <a class="download" href="Gracze.html">
+        🎮 Zobacz listę graczy
     </a>
 
     <div class="info"><span class="label">Login:</span> fiukmikolaj071@gmail.com</div>
@@ -143,7 +216,7 @@ h2{
     </div>
 
     <div class="footer">
-        Miłej gry na serverze 😄🔥
+        Miłej gry na serwerze 😄🔥
     </div>
 </div>
 
