--- a/index.html
+++ b/index.html
@@ -1,224 +1,13 @@
 <!DOCTYPE html>
-<html lang="pl">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" type="image/x-icon" href="https://mikolajfiuk.xce.pl/favicon.ico">
-<title>Debian login</title>
-
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
-
-<style>
-*{box-sizing:border-box;font-family:'Poppins',sans-serif;}
-
-body{
-    margin:0;
-    min-height:100vh;
-    background:url("tlo.gif") no-repeat center center fixed;
-    background-size:cover;
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    padding:20px;
-    overflow:hidden;
-}
-
-.overlay{
-    position:fixed;
-    inset:0;
-    background:linear-gradient(120deg, rgba(0,229,255,0.15), rgba(0,0,0,0.55), rgba(0,119,255,0.2));
-    animation:bgMove 12s ease-in-out infinite;
-    z-index:-2;
-}
-
-.particle{
-    position:absolute;
-    width:6px;
-    height:6px;
-    background:#00e5ff;
-    border-radius:50%;
-    opacity:.6;
-    animation:float 10s linear infinite;
-}
-
-.card{
-    position:relative;
-    background:rgba(255,255,255,0.12);
-    backdrop-filter:blur(14px);
-    border-radius:22px;
-    padding:30px;
-    max-width:480px;
-    width:100%;
-    color:#fff;
-    box-shadow:
-        0 0 25px rgba(0,229,255,.25),
-        0 0 60px rgba(0,0,0,.7);
-    animation:floatIn 1.1s cubic-bezier(.2,.8,.2,1);
-    transition:.4s;
-}
-
-.card:hover{
-    transform:translateY(-6px) scale(1.01);
-    box-shadow:
-        0 0 35px rgba(0,229,255,.45),
-        0 0 90px rgba(0,0,0,.8);
-}
-
-h2{
-    text-align:center;
-    margin-bottom:20px;
-    text-shadow:0 0 12px rgba(0,229,255,.7);
-}
-
-.info{
-    margin:10px 0;
-    font-size:15px;
-}
-
-.label{
-    color:#00e5ff;
-    font-weight:600;
-}
-
-.download{
-    position:relative;
-    display:block;
-    text-align:center;
-    margin:12px 0;
-    padding:13px;
-    background:linear-gradient(135deg,#00e5ff,#0077ff);
-    color:#000;
-    border-radius:30px;
-    text-decoration:none;
-    font-weight:700;
-    letter-spacing:.5px;
-    overflow:hidden;
-    transition:.3s;
-}
-
-.download::before{
-    content:"";
-    position:absolute;
-    top:0;
-    left:-100%;
-    width:100%;
-    height:100%;
-    background:linear-gradient(120deg,transparent,rgba(255,255,255,.6),transparent);
-    transition:.6s;
-}
-
-.download:hover::before{
-    left:100%;
-}
-
-.download:hover{
-    transform:scale(1.07);
-    box-shadow:0 0 22px #00e5ff;
-}
-
-.steps{
-    margin-top:20px;
-    background:rgba(0,0,0,0.35);
-    padding:15px;
-    border-radius:15px;
-    font-size:14px;
-    animation:fadeUp 1.2s ease;
-}
-
-.steps h3{
-    margin-top:0;
-    color:#00e5ff;
-    font-size:17px;
-}
-
-.steps ol{
-    padding-left:18px;
-}
-
-.footer{
-    text-align:center;
-    margin-top:18px;
-    font-size:16px;
-    opacity:.9;
-}
-
-@media(max-width:480px){
-    h2{font-size:20px;}
-    .info,.steps{font-size:13px;}
-    .download{font-size:14px;}
-}
-
-@keyframes floatIn{
-    from{opacity:0;transform:translateY(50px) scale(.9);}
-    to{opacity:1;transform:translateY(0) scale(1);}
-}
-
-@keyframes fadeUp{
-    from{opacity:0;transform:translateY(20px);}
-    to{opacity:1;transform:translateY(0);}
-}
-
-@keyframes bgMove{
-    0%{filter:hue-rotate(0deg);}
-    50%{filter:hue-rotate(40deg);}
-    100%{filter:hue-rotate(0deg);}
-}
-
-@keyframes float{
-    from{transform:translateY(110vh) scale(.5);opacity:0;}
-    20%{opacity:.6;}
-    to{transform:translateY(-10vh) scale(1.2);opacity:0;}
-}
-</style>
-</head>
+<html lang="pl"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>Logowanie</title>
+<style type="text/css" id="operaUserStyle"></style></head>
 <body>
-
-<div class="overlay"></div>
-
-<script>
-for(let i=0;i<25;i++){
-    const p=document.createElement("div");
-    p.className="particle";
-    p.style.left=Math.random()*100+"%";
-    p.style.animationDelay=(Math.random()*10)+"s";
-    p.style.animationDuration=(6+Math.random()*8)+"s";
-    document.body.appendChild(p);
-}
-</script>
-
-<div class="card">
-    <h2>🔐 Logowanie do serwera</h2>
-
-    <div class="info"><span class="label">IP serwera:</span> 100.96.49.10</div>
-
-    <a class="download" href="https://pkgs.tailscale.com/stable/tailscale-setup-latest.exe">
-        ⬇ Pobierz VPN (Tailscale)
-    </a>
-
-    <!-- nowy link do listy graczy -->
-    <a class="download" href="Gracze.html">
-        🎮 Zobacz listę graczy
-    </a>
-
-    <div class="info"><span class="label">Login:</span> fiukmikolaj071@gmail.com</div>
-    <div class="info"><span class="label">Hasło:</span> FtwieU36utPfaetU</div>
-
-    <div class="steps">
-        <h3>📌 Jak dołączyć do serwera?</h3>
-        <ol>
-            <li>Pobierz i zainstaluj <b>Tailscale VPN</b>.</li>
-            <li>Zaloguj się na podany login i hasło.</li>
-            <li>Połącz VPN (status: Connected).</li>
-            <li>Uruchom grę.</li>
-            <li>Wpisz IP: <b>100.96.49.10</b></li>
-            <li>Gotowe – miłej gry 🎮</li>
-        </ol>
-    </div>
-
-    <div class="footer">
-        Miłej gry na serwerze 😄🔥
-    </div>
-</div>
-
+<h2>zaloguj śę do server</h2>
+<p><b>Adres VPN:</b> 100.96.49.10<br>
+<b>Login:</b> fiukmikolaj071@gmail.com<br>
+<b>Hasło:</b> FtwieU36utPfaetU<br>
+<pre></pre>
 </body>
 </html>
